change swagger and logger
