# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is the currency of rates service.",
+        "description": "A web service that, upon request, collects data from the public API of the national bank and saves the data to the local TEST database",
         "title": "Swagger kursRates API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
@@ -91,6 +91,30 @@
                     }
                 ],
                 "responses": {}
+            }
+        },
+        "/health": {
+            "get": {
+                "description": "Returns the health status of the application, including the database availability.",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Check the health status of the application",
+                "operationId": "health-check",
+                "responses": {
+                    "200": {
+                        "description": "Status: Available",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "503": {
+                        "description": "Status: Not available",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
             }
         }
     }
